fix scrollbar blocking popover text in canary

--- a/less/_popovers.less
+++ b/less/_popovers.less
@@ -14,6 +14,7 @@
 	.content {
 
 		color: @global-text !important;
+		overflow: initial !important;
 
 		.source-frame-popover-title {
 			color: @popover-title !important;
